translated most of ingame dialogues, credits and savegame menu, restructured file structure

--- a/tools/script_extractor/extract_script.html
+++ b/tools/script_extractor/extract_script.html
@@ -128,6 +128,7 @@ function parseBank(){
 <body>
 	<label>Bank <select id="bank">
 		<option value="13,4000,100">Bank 19 - In-game dialogue</option>
+		<option value="12,4000,144">Bank 18 - Savegame menu</option>
 	</select></label>
 <hr/>
 </body></html>
