--- a/tools/pause_descriptions_generator/index.html
+++ b/tools/pause_descriptions_generator/index.html
@@ -9,49 +9,50 @@
 <body>
 	<div style="float:right">
 		<input type="text" id="item0a" value="You can move" oninput="buildCanvas()"><br/>
-		<input type="text" id="item0b" value="  big demon stones!" oninput="buildCanvas()">
+		<input type="text" id="item0b" value="            larger stones!" oninput="buildCanvas()">
 		<hr/>
 		<input type="text" id="item1a" value="You can turn big" oninput="buildCanvas()"><br/>
-		<input type="text" id="item1b" value="enemies into stones!" oninput="buildCanvas()">
+		<input type="text" id="item1b" value="    enemies to stones!" oninput="buildCanvas()">
 		<hr/>
-		<input type="text" id="item2a" value="You can break big" oninput="buildCanvas()"><br/>
-		<input type="text" id="item2b" value="enemies & stones!" oninput="buildCanvas()">
+		<input type="text" id="item2a" value="You can destroy big" oninput="buildCanvas()"><br/>
+		<input type="text" id="item2b" value="      enemies & stones!" oninput="buildCanvas()">
 		<hr/>
-		<input type="text" id="item3a" value="You can lure" oninput="buildCanvas()"><br/>
-		<input type="text" id="item3b" value="          big enemies!" oninput="buildCanvas()">
+		<input type="text" id="item3a" value="You can provoke" oninput="buildCanvas()"><br/>
+		<input type="text" id="item3b" value="             large enemies!" oninput="buildCanvas()">
 		<hr/>
-		<input type="text" id="item4a" value="You can walk on" oninput="buildCanvas()"><br/>
-		<input type="text" id="item4b" value="   electrified floors!" oninput="buildCanvas()">
+		<input type="text" id="item4a" value="You can cross" oninput="buildCanvas()"><br/>
+		<input type="text" id="item4b" value="    electrified floors!" oninput="buildCanvas()">
 		<hr/>
-		<input type="text" id="item5a" value="Nice clock, but it's" oninput="buildCanvas()"><br/>
-		<input type="text" id="item5b" value="     stuck at 3:00!" oninput="buildCanvas()">
+
+		<input type="text" id="item5a" value="A broken clock," oninput="buildCanvas()"><br/>
+		<input type="text" id="item5b" value="       it's stuck at 3pm." oninput="buildCanvas()">
 		<hr/>
-		<input type="text" id="item6a" value="This is the" oninput="buildCanvas()"><br/>
-		<input type="text" id="item6b" value="amulet text." oninput="buildCanvas()">
+		<input type="text" id="item6a" value="This amulet would" oninput="buildCanvas()"><br/>
+		<input type="text" id="item6b" value="     make a great gift!" oninput="buildCanvas()">
 		<hr/>
-		<input type="text" id="item7a" value="Big acorn. It has" oninput="buildCanvas()"><br/>
-		<input type="text" id="item7b" value="a golden shine." oninput="buildCanvas()">
+		<input type="text" id="item7a" value="A big acorn with" oninput="buildCanvas()"><br/>
+		<input type="text" id="item7b" value="            a golden shine." oninput="buildCanvas()">
 		<hr/>
-		<input type="text" id="item8a" value="Cute, teddy bear!" oninput="buildCanvas()"><br/>
-		<input type="text" id="item8b" value=" " oninput="buildCanvas()">
+		<input type="text" id="item8a" value="A soft and cuddly" oninput="buildCanvas()"><br/>
+		<input type="text" id="item8b" value="                   teddy bear." oninput="buildCanvas()">
 		<hr/>
-		<input type="text" id="item9a" value="Big shellfish." oninput="buildCanvas()"><br/>
-		<input type="text" id="item9b" value="       It has a pearl." oninput="buildCanvas()">
+		<input type="text" id="item9a" value="A clamshell with a" oninput="buildCanvas()"><br/>
+		<input type="text" id="item9b" value="     shiny pearl inside." oninput="buildCanvas()">
 		<hr/>
-		<input type="text" id="item10a" value="Treasure box." oninput="buildCanvas()"><br/>
-		<input type="text" id="item10b" value="      It won't open..." oninput="buildCanvas()">
+		<input type="text" id="item10a" value="A treasure chest" oninput="buildCanvas()"><br/>
+		<input type="text" id="item10b" value="  that is sealed shut." oninput="buildCanvas()">
 		<hr/>
-		<input type="text" id="item11a" value="Snowman." oninput="buildCanvas()"><br/>
-		<input type="text" id="item11b" value="  It's cold to touch." oninput="buildCanvas()">
+		<input type="text" id="item11a" value="A tiny snowman" oninput="buildCanvas()"><br/>
+		<input type="text" id="item11b" value="     that doesn't melt." oninput="buildCanvas()">
 		<hr/>
-		<input type="text" id="item12a" value="This is the large." oninput="buildCanvas()"><br/>
-		<input type="text" id="item12b" value="gear text." oninput="buildCanvas()">
+		<input type="text" id="item12a" value="A rusty gear with" oninput="buildCanvas()"><br/>
+		<input type="text" id="item12b" value="        unknown origins." oninput="buildCanvas()">
 		<hr/>
-		<input type="text" id="item13a" value="Hmm. What are you" oninput="buildCanvas()"><br/>
-		<input type="text" id="item13b" value="going to do with this?" oninput="buildCanvas()">
+		<input type="text" id="item13a" value="A large anchor," oninput="buildCanvas()"><br/>
+		<input type="text" id="item13b" value="               it's so heavy!" oninput="buildCanvas()">
 		<hr/>
-		<input type="text" id="item14a" value="What is this? It's" oninput="buildCanvas()"><br/>
-		<input type="text" id="item14b" value="   like a golden fang" oninput="buildCanvas()">
+		<input type="text" id="item14a" value="A fang that might" oninput="buildCanvas()"><br/>
+		<input type="text" id="item14b" value="      be from a dragon." oninput="buildCanvas()">
 	</div>
 
 	<canvas id="canvas" width="128" height="368"></div>
